--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -42,4 +42,20 @@
   --notify-box-shadow: rgba(0, 0, 0, 0.6);
   --portal-menu-box-shadow: rgba(0, 0, 0, 0.7);
   --main-text-stroke: #fff;
+  --dark-alpha-10: rgba(0, 0, 0, 0.1);
+  --dark-alpha-50: rgba(0, 0, 0, 0.5);
+  --dark-alpha-70: rgba(0, 0, 0, 0.7);
+  --dark-alpha-80: rgba(0, 0, 0, 0.8);
+}
+
+[data-theme="purple"] {
+  --primary-bg: #432275;
+  --layout-bg: #170f23;
+  --sidebar-popup-bg: #2a213a;
+  --alpha-layout-bg: rgba(41, 21, 71, 0.8);
+  --queue-player-popup-bg: #120822;
+  --blur-queue-bg: rgba(30, 21, 47, 0.9019607843137255);
+  --purple-primary: #7200a1;
+  --link-text-hover: #c662ef;
+  --chart-bg-img-alpha: rgba(32, 19, 53, 0.9);
 }
