--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -438,3 +438,98 @@ a:hover {
 }
 
 /* end progress bar */
+
+/* start musicNote */
+.musicNote {
+  @apply w-3;
+  @apply h-3;
+  @apply absolute;
+  @apply opacity-0;
+  top: calc(50% - 5px);
+  left: calc(50% - 5px);
+  -webkit-animation-name: 4.8s bubble-1 linear infinite;
+  animation: 4.8s bubble-1 linear infinite;
+  animation-play-state: paused;
+}
+
+.musicNote path {
+  fill: var(--text-primary);
+}
+
+.musicNote.note-2 {
+  animation-delay: 1.2s;
+  animation-name: bubble-2;
+}
+
+.musicNote.note-3 {
+  animation-delay: 2.4s;
+}
+
+.musicNote .note-4 {
+  animation-delay: 3.6s;
+  animation-name: bubble-2;
+}
+
+@keyframes bubble-1 {
+  0% {
+    @apply opacity-0;
+    transform: rotate(90deg) translate(40px) rotate(-90deg);
+  }
+
+  50% {
+    @apply opacity-100;
+    transform: rotate(180deg) translate(55px) rotate(-180deg) scale(1.3);
+  }
+
+  to {
+    @apply opacity-0;
+    transform: rotate(260deg) translate(70px) rotate(-260deg) scale(1.7)
+      rotate(45deg) rotate(50deg);
+  }
+}
+
+@keyframes bubble-2 {
+  0% {
+    @apply opacity-0;
+    transform: rotate(90deg) translate(40px) rotate(-90deg);
+  }
+
+  50% {
+    @apply opacity-100;
+    transform: rotate(175deg) translate(57.5px) rotate(-175deg) scale(1.3)
+      rotate(-50deg);
+  }
+
+  to {
+    @apply opacity-0;
+    transform: rotate(260deg) translate(75px) rotate(-260deg) scale(1.7)
+      rotate(45deg) rotate(-50deg);
+  }
+}
+
+.thumbnail {
+  @apply m-0;
+  @apply w-16;
+  @apply w-16;
+  @apply rounded-full;
+  @apply relative;
+  @apply overflow-hidden;
+  animation: 12s spinner linear infinite;
+  animation-play-state: paused;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.music_played .musicNote,
+.music_played .thumbnail {
+  animation-play-state: running;
+}
+
+/* end musicNote */
